# QuShape

./: MANIFEST.in  conda-env.yml  installation.md  setup.cfg
misc/: QuShape.desktop  QuShape.desktop.tpl  bsddb3-6.2.9-cp27-cp27mu-linux_x86_64.whl  conda-env.yml  meta.yaml  post-link.sh
qushape/: __main__.py  funcMainWin.py  imports.py  main.py  mainWindow.py  qushape_yamlify.py  utils.py
qushape/Dialogs/: editDialogs.py  extraDialogs.py  myWidgets.py  newProjDialogs.py  seqDialogs.py  toolDialogs.py
qushape/Functions/: funcByRef.py  funcFile.py  funcGeneral.py
src/: imports.py  mainWindow.py
src/Functions/: funcGeneral.py  funcSeqAll.py
