[metadata]
name = QuShape
version = 1.0.5
description = QuShape is a comprehensive, platform-independent, user-friendly, and complete software package that enables efficient, reliable, highly automated, and accurate analysis of high-throughput capillary electrophoresis-detected nucleic acid chemical probing experiments.
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, SHAPE, SHAPE-CE, probing 
licence = GPL
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = = 2.7
[options]
packages = find:
install_requires =
    wheel
    cython
    #PyQt4
#    pyqt == 4.11.4
    numpy
    matplotlib
    scipy
    bsddb3
    scipy
    pyyaml

[options.entry_points]
console_scripts =
    qushape = qushape.main:main_wrapper
    qushape_yamlify = qushape.yamlify:main_wrapper
