[metadata]
name = QuShape
version = 1.0.18
description = QuShape is a comprehensive, platform-independent, user-friendly, and complete software package that enables efficient, reliable, highly automated, and accurate analysis of high-throughput capillary electrophoresis-detected nucleic acid chemical probing experiments.
long_description = file: README.md 
long_description_content_type = text/markdown
keywords = RNA, folding, bioinformatics, SHAPE, SHAPE-CE, probing 
licence = GPL
classifiers =
    Programming Language :: Python :: 2
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
python_requires = = 2.7
[options]
packages = find:
include_package_data = True
install_requires =
    wheel
    cython
    #PyQt4
#    pyqt == 4.11.4
    numpy
    matplotlib
    scipy
    scipy
    pyyaml
[options.extras_require]
legacy_project_file = bsddb3
[options.entry_points]
console_scripts =
    qushape = qushape.main:main_wrapper
    qushape_yamlify = qushape.qushape_yamlify:main_wrapper
